exports[`<SnippetList /> snapshot tests matches when no snippets are passed 1`] = `
<MenuItem
  anchorOrigin={
    Object {
      "horizontal": "right",
      "vertical": "top",
    }
  }
  checked={false}
  desktop={false}
  disabled={true}
  focusState="none"
  insetChildren={false}
  menuItems={null}
  onTouchTap={[Function]}
  primaryText=""
  rightIcon={<NavigationArrowDropRight />} />
`;

exports[`<SnippetList /> snapshot tests matches when snippets are passed 1`] = `
<MenuItem
  anchorOrigin={
    Object {
      "horizontal": "right",
      "vertical": "top",
    }
  }
  checked={false}
  desktop={false}
  disabled={false}
  focusState="none"
  insetChildren={false}
  menuItems={
    Array [
      <MenuItem
        anchorOrigin={
            Object {
                "horizontal": "right",
                "vertical": "top",
              }
        }
        checked={false}
        desktop={false}
        disabled={false}
        focusState="none"
        insetChildren={false}
        onTouchTap={[Function]}
        primaryText={
            <table
                style={
                    Object {
                        "width": "100%",
                      }
                }>
                <tbody>
                    <tr>
                        <td
                            style={
                                Object {
                                    "width": "13em",
                                  }
                            }>
                            bar
                        </td>
                        <td
                            style={
                                Object {
                                    "float": "left",
                                    "fontSize": "80%",
                                  }
                            } />
                        <td
                            style={
                                Object {
                                    "float": "right",
                                    "fontSize": "80%",
                                  }
                            }>
                            <o
                                ago={true}
                                calendar={false}
                                fromNow={true}
                                toNow={false}
                                unix={false}
                                utc={false} />
                        </td>
                    </tr>
                </tbody>
            </table>
        } />,
      <MenuItem
        anchorOrigin={
            Object {
                "horizontal": "right",
                "vertical": "top",
              }
        }
        checked={false}
        desktop={false}
        disabled={false}
        focusState="none"
        insetChildren={false}
        onTouchTap={[Function]}
        primaryText={
            <table
                style={
                    Object {
                        "width": "100%",
                      }
                }>
                <tbody>
                    <tr>
                        <td
                            style={
                                Object {
                                    "width": "13em",
                                  }
                            }>
                            qux
                        </td>
                        <td
                            style={
                                Object {
                                    "float": "left",
                                    "fontSize": "80%",
                                  }
                            } />
                        <td
                            style={
                                Object {
                                    "float": "right",
                                    "fontSize": "80%",
                                  }
                            }>
                            <o
                                ago={true}
                                calendar={false}
                                fromNow={true}
                                toNow={false}
                                unix={false}
                                utc={false} />
                        </td>
                    </tr>
                </tbody>
            </table>
        } />,
    ]
  }
  onTouchTap={[Function]}
  primaryText=""
  rightIcon={<NavigationArrowDropRight />} />
`;
